# llama-jaxtyping

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
llama_jaxtyping/: llama.py
tests/: test_llama.py
